[package]
name = "frame_player"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
crossbeam-channel = "0.5.15"
directories = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
env_logger = "0.11.11"
ffmpeg-next = "8.1.0"
log = "0.4.33"
raw-window-handle = "0.6.2"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
